--- a/styles/color.scss
+++ b/styles/color.scss
@@ -75,11 +75,13 @@ $primary-600: #4f46e5;
 $primary-700: #4338ca;
 $primary-800: #3730a3;
 $primary-900: #312e81;
+$secondary-300: #d6bbfb;
 $secondary-600: #7f56d9;
 $gray-50: #f9fafb;
 $gray-100: #f3f4f6;
 $gray-200: #e5e7eb;
 $gray-300: #d1d5db;
+$gray-350: #d0d5dd;
 $gray-400: #9ca3af;
 $gray-500: #6b7280;
 $gray-600: #4b5563;
