fixed the pagination buttons and page info styling.

--- a/features/footer/footer.module.scss
+++ b/features/footer/footer.module.scss
@@ -5,6 +5,10 @@
   border-top: 1px solid #e4e7ec;
   z-index: 1;
 
+  .version {
+    color: #98a2b3;
+  }
+
   .container {
     max-width: 1160px;
     height: 60px;
